
* Now in ``version_creator`` the shot frame range and handle information can be
  updated.

* Fixed tests of ``version_creator``, the popups were interrupting the test
  while the environment to UI relation was tested. Now the dialog boxes only
  appear if the system is not in debug mode.

* Added thumbnail support and ``version_creator`` UI can load/upload the
  defined thumbnails.

0.2.2
-----

* Added :attr:`~oyProjectManager.core.models.Version.is_published` to
  :class:`~oyProjectManager.core.models.Version` class to track if a particular
  Version is published.

* ``version_creator`` UI now shows the published
  :class:`~oyProjectManager.core.models.Version`\ s in green and bold font.

* :class:`~oyProjectManager.core.models.User` instances now have a
  :meth:`~oyProjectManager.core.models.User.save` method to easily save the
  data to the database.

* Added ``Show Only Published Versions`` option to the ``version_creator`` UI.

* ``version_creator`` UI now only shows a definite amount of previous Versions,
  and it can be adjustable by the ``version_count_spinBox``.

* Default database placement now uses the ``$OYPROJECTMANAGER_PATH`` instead of
  ``REPO``. It is much better to store ``config.py`` and ``project_manager.db``
  side by side.

* Fixed a bug in :class:`~oyProjectManager.core.models.Sequence` where it was
  not able to create two Sequences with the same name but for different
  :class:`~oyProjectManager.core.models.Project`\ s.

* Added the ability work both with PySide and PyQt4 by setting the environment
  variable ``PREFERRED_QT_MODULE`` to ``PySide`` or ``PyQt4`` respectively
  before launching the application (added especially for Nuke 6.3v5 and later
  for their inclusion of PySide to their default install). If no environment
  variable is found then the system will continue to work with PyQt4.

* In Maya the resolution will only be set if the given
  :class:`~oyProjectManager.core.models.Version` instances version number is 1